<resources>
    <string name="app_name">智能安检</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="nor_item_txt0">工单号:%1$s</string>
    <string name="nor_item_txt1">姓名:%1$s</string>
    <string name="nor_item_txt2">电话:%1$s</string>
    <string name="nor_item_txt3">地址:%1$s</string>
    <string name="nor_item_txt4">时间:%1$s</string>
    <string name="curr_status">当前状态:%1$s</string>
    <string name="curr_person">执行人:%1$s</string>
    <string name="staff_view_item0">珠海港兴管道天然气有限公司</string>
    <string name="staff_view_item1">户内管安全检查工作单</string>
    <string name="staff_view_item2">营业厅:珠海斗门区湖心路诚丰新园2栋一楼1298-1304号商铺</string>
    <string name="staff_view_item3"></string>
    <string name="staff_view_item4">隐患整改通知单</string>
    <string name="staff_view_item6">尊敬的%1$s%2$s%3$s 业主:</string>
    <string name="staff_view_item5">%1$s我司安检时发现您户内因下列几项已违反国家有关法规、企业安全标准的相关条款，危及燃气管网安全及户内用气安全：</string>
</resources>
