<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:background="@mipmap/img_bg"
            android:layout_height="150dp">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/item_icon"
                            android:layout_width="40dp"
                            android:background="@mipmap/icon_unclaimed"
                            android:layout_height="40dp" />
                        <TextView
                            android:id="@+id/item_tag"
                            android:layout_width="wrap_content"
                            android:text="完成"
                            android:layout_marginTop="6dp"
                            android:textSize="12sp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/font_light"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/item0"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/nor_item_txt0"
                            style="@style/nor_item_txt"
                            android:layout_weight="1"/>
                        <TextView
                            android:id="@+id/item1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            style="@style/nor_item_txt"
                            android:text="@string/nor_item_txt1"
                            android:layout_weight="1"/>
                        <TextView
                            android:id="@+id/item2"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            style="@style/nor_item_txt"
                            android:text="@string/nor_item_txt2"
                            android:layout_weight="1"/>
                        <TextView
                            android:id="@+id/item3"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            style="@style/nor_item_txt"
                            android:text="@string/nor_item_txt3"
                            android:layout_weight="1"/>
                        <TextView
                            android:id="@+id/item4"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            style="@style/nor_item_txt"
                            android:text="@string/nor_item_txt4"
                            android:layout_weight="1"/>
                    </LinearLayout>

                </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:gravity="right"
                android:padding="5dp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/item5"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/rd_p"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </FrameLayout>

        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>