<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_heigh">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:background="@drawable/back_act" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center">

            <TextView
                android:id="@+id/print"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/shape_btn_blue"
                android:ems="12"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:text="打印单据"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@mipmap/line_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <com.hhkj.gas.www.widget.MyScroll
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/font_normal"
                    android:text="@string/staff_view_item0"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/font_normal"
                    android:text="@string/staff_view_item4"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/item0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/font_normal"
                    android:text="工作编号"
                    android:layout_marginBottom="8dp"
                    android:textSize="14sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/shape_detail_bord"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/item1"
                    android:layout_width="wrap_content"
                    android:text="@string/staff_view_item6"
                    android:textSize="14sp"
                    android:textColor="@color/font_normal"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/item2"
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:text="@string/staff_view_item5"
                    android:textColor="@color/font_normal"
                    android:layout_height="wrap_content" />
                <com.hhkj.gas.www.widget.InScrollListView
                    android:id="@+id/item3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:listSelector="@color/no_color"
                    android:background="@color/no_color"
                    android:cacheColorHint="@color/no_color"
                    android:divider="@color/no_color"
                    android:dividerHeight="0dp" />
                <TextView
                    android:id="@+id/item4"
                    android:layout_width="match_parent"
                    android:textSize="14sp"

                    android:textColor="@color/font_normal"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/item5"
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:textColor="@color/font_normal"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/item6"
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:textColor="@color/font_normal"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/item7"
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:textColor="@color/font_normal"
                    android:layout_height="wrap_content" />
                <TextView

                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:text="客户签名"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/font_normal"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/item8"
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:textColor="@color/font_normal"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/item9"
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:textColor="@color/font_normal"
                    android:layout_height="wrap_content" />
            </LinearLayout>
                <TextView
                  android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:text="服务热线:"
                    android:textColor="@color/font_normal"
                    android:layout_height="wrap_content" />

                </LinearLayout>
        </com.hhkj.gas.www.widget.MyScroll>
        </LinearLayout>
    </LinearLayout>

