<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_heigh">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:background="@drawable/back_act" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/shape_btn_blue"
                android:ems="12"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:text="安检任务单"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@mipmap/nav_icon_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="隐患单"
                android:textColor="@color/blue_n"
                android:textSize="10sp" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@mipmap/line_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.hhkj.gas.www.widget.MyScroll
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@mipmap/bg_title"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:text="基本信息"
                        android:textColor="@color/white"
                        android:textSize="9sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="-20dp"
                        android:orientation="vertical">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_personage"
                                android:orientation="vertical"
                                android:paddingBottom="20dp"
                                android:paddingLeft="15dp"
                                android:paddingRight="10dp"
                                android:paddingTop="8dp">

                                <TextView
                                    android:id="@+id/item0"
                                    style="@style/de_item_txt"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:text="@string/nor_item_txt0" />

                                <TextView
                                    android:id="@+id/item1"
                                    style="@style/de_item_txt"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:text="@string/nor_item_txt1" />

                                <TextView
                                    android:id="@+id/item2"
                                    style="@style/de_item_txt"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:text="@string/nor_item_txt2" />

                                <TextView
                                    android:id="@+id/item3"
                                    style="@style/de_item_txt"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:text="@string/nor_item_txt3" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_marginRight="40dp"
                                android:layout_marginTop="20dp"
                                android:background="@mipmap/icon_personage" />
                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/item4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentLeft="true"
                                    android:gravity="center"
                                    android:text="@string/nor_item_txt4"
                                    android:textColor="@color/blue_n"
                                    android:textSize="12sp" />

                                <ImageView
                                    android:id="@+id/item_edit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_toRightOf="@+id/item4"
                                    android:src="@mipmap/icon_edit" />

                                <TextView
                                    android:id="@+id/item5"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginLeft="20dp"
                                    android:gravity="center"
                                    android:text="@string/curr_status"
                                    android:textColor="@color/font_normal"
                                    android:textSize="12sp" />
                            </RelativeLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="right">

                                <TextView
                                    android:id="@+id/item6"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:layout_marginLeft="20dp"
                                    android:layout_marginTop="4dp"
                                    android:gravity="center"
                                    android:text="@string/curr_person"
                                    android:textColor="@color/font_normal"
                                    android:textSize="12sp" />
                            </LinearLayout>

                        </LinearLayout>


                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@mipmap/bg_line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/bg_title"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="拍照部分"
                    android:textColor="@color/white"
                    android:textSize="9sp" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <GridView
                            android:id="@+id/item7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:background="@color/no_color"
                            android:horizontalSpacing="10dp"
                            android:numColumns="auto_fit" />
                    </LinearLayout>
                </HorizontalScrollView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@mipmap/bg_line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/bg_title"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="内容和结果"
                    android:textColor="@color/white"
                    android:textSize="9sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <com.hhkj.gas.www.widget.InScrollListView
                        android:id="@+id/item8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/no_color"
                        android:cacheColorHint="@color/no_color"
                        android:divider="@mipmap/line_gray"
                        android:dividerHeight="1dp"></com.hhkj.gas.www.widget.InScrollListView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@mipmap/line_gray" />
                </LinearLayout>

                <TextView
                    android:id="@+id/item9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@color/cancle"
                    android:ems="12"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="查看更多"
                    android:textColor="@color/font_normal"
                    android:textSize="13sp" />
            </LinearLayout>
        </com.hhkj.gas.www.widget.MyScroll>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="150"
            android:background="@color/rd_n"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="打印单据"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="275"
            android:background="@color/org_n"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="提交"
                android:textColor="@color/font_normal"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>